fix basket route
